--- a/project2/techtrends/Dockerfile
+++ b/project2/techtrends/Dockerfile
@@ -3,6 +3,6 @@ FROM python:3.8
 COPY . /app
 WORKDIR /app
 RUN pip install -r requirements.txt
+EXPOSE 3111
 
-
-CMD ["python","app.py"]
+CMD ["sh","-c","python init_db.py && python app.py"]
