--- a/project2/techtrends/.github/workflows/techtrends-dockerhub.yml
+++ b/project2/techtrends/.github/workflows/techtrends-dockerhub.yml
@@ -34,5 +34,5 @@ jobs:
           file: ./Dockerfile
           platforms: linux/amd64
           push: true
-          tags: techtrends:latest
+          tags: yfann/techtrends:latest
     
