--- a/project2/helm/templates/deploy.yaml
+++ b/project2/helm/templates/deploy.yaml
@@ -15,8 +15,7 @@ spec:
     spec:
       containers:
       - name: techtrends
-        image: {{ .Values.image.repository }}
-        tag: {{ .Values.image.tag }}
+        image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
         imagePullPolicy: {{ .Values.image.pullPolicy }} 
         ports:
         - containerPort: {{ .Values.containerPort }} 
