--- a/project2/helm/values.yaml
+++ b/project2/helm/values.yaml
@@ -19,7 +19,7 @@ resources:
     memory: "64Mi"
     CPU: "250m"
   limits:
-    momory: "128Mi"
+    memory: "128Mi"
     CPU: "500m"
 
 containerPort: 3111
