--- a/project2/helm/values-staging.yaml
+++ b/project2/helm/values-staging.yaml
@@ -19,7 +19,7 @@ resources:
     memory: "90Mi"
     CPU: "300m"
   limits:
-    momory: "128Mi"
+    memory: "128Mi"
     CPU: "500m"
 
 containerPort: 3111
